@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout 
-	xmlns:android="http://schemas.android.com/apk/res/android" 
-	android:layout_width="fill_parent"
-	android:orientation="vertical" 
-	android:id="@+id/itemRoot" android:paddingLeft="20dip" android:paddingRight="20dip" android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/itemRoot"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dip"
+    android:layout_marginRight="10dip"
+    android:orientation="vertical"
+    android:paddingLeft="20dip"
+    android:paddingRight="20dip" >
+
 		<TextView
             android:id="@+id/toptext"
             android:layout_width="fill_parent"
